--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vitejs/plugin-react": "^5.1.0",
     "framer-motion": "^10.18.0",
+    "lenis": "^1.3.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
